--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy HTML Project
+name: Deploy to Kubernetes
 
 on:
   push:
@@ -6,44 +6,36 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      run: |
-        docker build -t william146/mon-application-html:latest .
-        docker push william146/mon-application-html:latest
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./dockerfile
+        push: true
+        tags: william146/mon-application-html:v1
 
-    - name: Set up Kubernetes
+    - name: Set up kubectl
       uses: azure/setup-kubectl@v1
       with:
-        kubectl-version: 'latest'
-
-    - name: Set up kubeconfig
-      run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-
-    - name: Verify kubectl version
-      run: kubectl version --client
-
-    - name: Verify kubectl configuration
-      run: kubectl config view
+        version: 'latest'
 
     - name: Deploy to Kubernetes
       run: |
-        kubectl apply -f deployment.yaml
+        kubectl apply -f deploiement.yaml
         kubectl apply -f service.yaml
