--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ../Dockerfile
+        file: Dockerfile
         push: true
         tags: william146/mon-application-html:v1
 
