--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,5 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        kubectl apply -f deploiement.yaml
+        kubectl apply -f deployment.yaml
         kubectl apply -f service.yaml
